# vkcompute

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
src/: dot.glsl  experimental.cpp  hadamard.glsl  main.cpp  softmax.glsl  vkcompute.hpp
